--- a/dump/about-blank-embed.html
+++ b/dump/about-blank-embed.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="/css/about-blank.css" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <title>about:blank | BBC Unblocked Games</title>
+    <title>about:blank | Lo-Fi Unblocked Games</title>
   </head>
   <body>
     <div class="console-container">
