--- a/dump/bookmarklets.html
+++ b/dump/bookmarklets.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bookmarklets | BBC Unblocked Games</title>
+    <title>Bookmarklets | Lo-Fi Unblocked Games</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300&display=swap" rel="stylesheet" />
     <link href="/css/bookmarklets.css" rel="stylesheet" />
     <script src="/js/main.js"></script>
