--- a/dump/redirect-gen.html
+++ b/dump/redirect-gen.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Redirect generator | BBC Unblocked Games</title>
+    <title>Redirect generator | Lo-Fi Unblocked Games</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/css/redirect.css" />
     <link rel="icon" href="/favicon.ico" />
